add products to cart

--- a/src/components/SingleProduct/SingleProduct.css
+++ b/src/components/SingleProduct/SingleProduct.css
@@ -5,6 +5,7 @@
   line-height: normal;
   letter-spacing: 1px;
   text-transform: uppercase;
+  margin-top: 24px;
 }
 .prod-head-single-p {
   color: #000;
@@ -12,6 +13,7 @@
   font-weight: 500;
   line-height: 25px;
   opacity: 0.5;
+  margin-top: 24px;
 }
 .price {
   color: #000;
@@ -20,6 +22,7 @@
   line-height: normal;
   letter-spacing: 1.286px;
   text-transform: uppercase;
+  margin-top: 24px;
 }
 .num {
   width: 120px;
@@ -35,6 +38,7 @@
   align-items: center;
   justify-content: center;
   gap: 16px;
+  margin-top: 24px;
 }
 .single-btn {
   width: 160px;
@@ -72,8 +76,9 @@
   text-transform: uppercase;
 }
 .gal {
-  width: 87.2%;
+  width: 100%;
   height: auto;
+  border-radius: 8px;
 }
 .feat {
   color: #000;
@@ -82,13 +87,72 @@
   line-height: 36px;
   letter-spacing: 0.857px;
   text-transform: uppercase;
+  margin-top: 88px;
 }
 .describ {
   color: #000;
   font-size: 15px;
   line-height: 25px;
   opacity: 0.5;
+  margin-top: 24px;
 }
 .suggestion {
   width: 100%;
+}
+.box {
+  color: #000;
+  margin: 88px 0 24px;
+}
+.x {
+  color: #d87d4a;
+}
+.list-span {
+  color: #000;
+  font-size: 15px;
+  line-height: 25px;
+  opacity: 0.5;
+  margin-left: 24px;
+  margin-top: 8px;
+}
+.singleProd {
+  padding: 0 24px;
+}
+.back {
+  color: #000;
+  font-size: 15px;
+  line-height: 25px;
+  opacity: 0.5;
+  margin-top: 16px;
+}
+.sug-img {
+  width: 100%;
+  height: auto;
+}
+.gallery {
+  margin-top: 88px;
+}
+.like {
+  color: #000;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0.857px;
+  text-transform: uppercase;
+  margin: 120px 0 40px;
+}
+.sug-title {
+  color: #000;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.714px;
+  text-transform: uppercase;
+}
+.first-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 32px auto 52px;
 }
