--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -36,6 +36,9 @@
   cursor: pointer;
   left: 21px;
 }
+.error {
+  border-color: #ff0000;
+}
 .e-mone-sec {
   content: "";
   border: 1px solid #cfcfcf;
