--- a/src/components/bring/Bringing.css
+++ b/src/components/bring/Bringing.css
@@ -1,5 +1,5 @@
 .man {
-  background-image: url(./assets/shared/mobile/image-best-gear.jpg);
+  background-image: url(../assets/shared/mobile/image-best-gear.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 8px;
