--- a/src/components/Done/Done.css
+++ b/src/components/Done/Done.css
@@ -22,3 +22,48 @@
   font-weight: 500;
   line-height: 25px;
 }
+hr {
+  opacity: 0.07999999821186066;
+  background: #000;
+  width: 215px;
+  margin: 12px auto;
+}
+.done-list {
+  border-radius: 8px;
+  background: #f1f1f1;
+  padding: 24px;
+}
+.cartDiv {
+  margin-top: 0;
+}
+.num-of-items {
+  color: #000;
+  font-size: 12px;
+  line-height: normal;
+  letter-spacing: -0.214px;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center;
+}
+.done-price {
+  background-color: #000;
+  padding: 16px 24px;
+  border-radius: 0px 0px 8px 8px;
+}
+.grandTotal {
+  color: #fff;
+  font-size: 15px;
+  line-height: 25px;
+  opacity: 0.5;
+}
+.done-btn {
+  width: 263px;
+  height: 48px;
+  background: #d87d4a;
+  border: none;
+  color: #fff;
+  font-size: 13px;
+  line-height: normal;
+  letter-spacing: 1px;
+  margin-top: 23px;
+}
