--- a/src/components/Done/Done.css
+++ b/src/components/Done/Done.css
@@ -3,6 +3,8 @@
   width: 87.2%;
   max-width: 540px;
   padding: 32px;
+  max-height: 600px;
+  border-radius: 8px;
 }
 .thanks {
   margin-top: 23px;
