--- a/src/components/adv/adv.css
+++ b/src/components/adv/adv.css
@@ -99,3 +99,19 @@
   border-radius: 8px;
   margin: 24px auto 0;
 }
+@media (min-width: 768px) {
+  .speaker-ad {
+    background-image: url(./assets/home/tablet/image-speaker-zx7.jpg);
+  }
+  .ear-ad {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .ear-div-text {
+    padding: 100px 24px;
+  }
+  ..ear-div-ad {
+    background-image: url(./assets/home/tablet/image-earphones-yx1.jpg);
+  }
+}
